--- a/Automark/Automark/CustomizePhotoViewController.xib
+++ b/Automark/Automark/CustomizePhotoViewController.xib
@@ -35,12 +35,19 @@
                     </items>
                     <color key="barTintColor" red="1" green="0.81960784310000001" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                 </toolbar>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eOx-yI-Z7W">
+                    <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.98823529409999999" green="0.53333333329999999" blue="0.6705882353" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="hlO-wI-KXz" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="6cJ-ur-Tzd"/>
+                <constraint firstAttribute="trailing" secondItem="eOx-yI-Z7W" secondAttribute="trailing" id="7Oc-zF-wVc"/>
                 <constraint firstAttribute="trailing" secondItem="hlO-wI-KXz" secondAttribute="trailing" id="F5Q-jB-6Ro"/>
+                <constraint firstItem="eOx-yI-Z7W" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="IWN-Li-gVJ"/>
                 <constraint firstItem="hlO-wI-KXz" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="VjR-Jt-7KB"/>
+                <constraint firstItem="eOx-yI-Z7W" firstAttribute="top" secondItem="hlO-wI-KXz" secondAttribute="bottom" id="XEi-D9-VB3"/>
+                <constraint firstAttribute="bottom" secondItem="eOx-yI-Z7W" secondAttribute="bottom" id="lUU-rY-DAE"/>
             </constraints>
         </view>
     </objects>
