--- a/Automark/Automark/CustomizePhotoViewController.xib
+++ b/Automark/Automark/CustomizePhotoViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomizePhotoViewController">
             <connections>
+                <outlet property="customImageView" destination="eOx-yI-Z7W" id="CxY-GN-OPv"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,10 +23,16 @@
                 <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hlO-wI-KXz">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                     <items>
+                        <barButtonItem style="plain" systemItem="organize" id="nC6-IT-p7D">
+                            <color key="tintColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="getImageFromPhotos:" destination="-1" id="37B-4i-87E"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem style="plain" systemItem="save" id="Kne-8D-2v3">
                             <color key="tintColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         </barButtonItem>
-                        <barButtonItem title="                                                               " id="jUO-aF-TAJ"/>
+                        <barButtonItem title="                                                        " id="jUO-aF-TAJ"/>
                         <barButtonItem systemItem="stop" id="9Jg-Nz-S3e">
                             <color key="tintColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
